--- a/运行参考.md
+++ b/运行参考.md
@@ -23,7 +23,7 @@
 - 将http://www.google-analytics.com/analytics.js存储到本地，减少请求等待时间。并将它与perfmatters.js进行合并压缩。
 
 ## web字体
-使用webfontloader.js进行字体的异步加载，在未加载完成前使用sans-serif来代替，加载好后启用新字体。
+- 使用webfontloader.js进行字体的异步加载，在未加载完成前使用sans-serif来代替，加载好后启用新字体。
 
 ## 服务器配置
 - 在本地的nginx有设置文件缓存和开启gzip，使用本地chrome插件PageSpeed可以达到100/100；
